--- a/style.css
+++ b/style.css
@@ -11,7 +11,31 @@ h2{
     color:mediumpurple;
     font-size: 30px;
 }
-p{
+.paragraph1{
     text-align: center;
     font-weight: 200;
+}
+.paragraph2{
+    text-align: center;
+    font-weight: 200;
+}
+.paragraph3{
+    text-align: center;
+    font-weight: 200;
+    background-color: rgb(234, 215, 249);
+    border: 4px solid purple;
+    width: 45%;
+    padding: 10px;
+    margin: 10px auto;
+    border-radius: 15px;
+}
+.paragraph4{
+    text-align: center;
+    font-weight: 200;
+    background-color: rgb(234, 215, 249);
+    border: 4px solid purple;
+    width: 45%;
+    padding: 10px;
+    margin: 10px auto;
+    border-radius: 15px;
 }
