--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {
+body{
     background-color:lavender;
 }
 h1{
@@ -38,4 +38,12 @@ h2{
     padding: 10px;
     margin: 10px auto;
     border-radius: 15px;
+}
+pre{
+    text-align: center;
+    font-size: 20px;
+    font-weight: 300;
+}
+.arrow{
+    font-size: 70px;
 }
