--- a/game.css
+++ b/game.css
@@ -13,7 +13,14 @@ input, button {
     padding: 13px;
     font-size: 16px;
 }
-
+#input-container {
+    display: flex;
+    align-items: center;
+}
+#input-label {
+    font-size: 20px;
+    margin-right: 10px;
+}
 button {
     cursor: pointer;
 }
@@ -55,6 +62,7 @@ button {
     width: 100%;
     text-align: right;
     margin-bottom: 10px;
+    font-size: 20px;
 }
 #lives {
     display: inline-block;
